--- a/exercise1/mypage.html
+++ b/exercise1/mypage.html
@@ -2,9 +2,21 @@
 <html>
 <head>
 <style>
+html { 
+  background: url(lastpic.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+
 div.container {
     width: 100%;
     border: 1px solid black;
+	color: white;
+	text-align: center;
+	clear: center;
 }
 
 header, footer {
@@ -14,18 +26,18 @@ header, footer {
     clear: left;
     text-align: center;
     font-family: french script mt;
+	font-size: 150%;
 }
-
 nav {
     float: left;
     max-width: 160px;
     margin: 0;
-    padding: 1em;
+    padding: 5em;
 }
 
 nav ul {
     list-style-type: none;
-    padding: 0;
+    padding: 1em;
 }
 			
 nav ul a {
@@ -36,7 +48,8 @@ article {
     margin-left: 170px;
     border-left: 1px gray;
     padding: 1em;
-    overflow: hidden;
+    overflow: hidden
+	font-size: 450%
 }
 </style>
 </head>
@@ -51,18 +64,26 @@ article {
 <nav>
   <ul>
     <li><a href="#">Shie &#9829</a></li>
-    
+    <img src="pic.jpg" alt="Mountain View" style="width:230px;height:300px;">
+
   </ul>
 </nav>
 
 <article>
+<div class="w3-container"> 
   <h1>Shierene &#9752</h1>
   <p>I am a bookworm whose favorite nocturnal hobby is reading books.</p>
-  <p>I hope this works.</p>
+  <p>I am Shierene Cervantes, called Shie by my close friends, whom you cannot really know well without spending some time to get along with. Whenever I ask my friends what their first impressions to me were, they say either I do not look someone you could easily approach, an extremely girly person who only make friends to others in the same “level” as I am, a person who’s so conscious about her appearance, and someone who gets easily annoyed. When people start to know who I am, most of them say that I’m a sweet and very reserved girl who is lady-like in every way. However, there’s more to me than just that. Unbelievable to some, my close friends know that once you get to really know me, your first impression would definitely change into a new perspective that’s quite the opposite as your first. According to them, I am really a girly girl who has something you never thought I have to show off once I get really close to a person, and they are probably referring to my childlike attitude whenever I am with people I’m comfortable with. They also say that I can easily get along with different kinds of people for I don’t really “choose” the people I want to be friends with.
+Reading books, playing the piano, listening to really good music, seeing little children happy, shopping after a very stressful midterm or final week at school, getting high grades and making my parents proud are some of the things that can really make me happy. I have read a lot of books that inspired me in a lot of different ways and I find reading books really an interesting way to take you places you’ve never been.
+</p>
   <p>Hello, you!</p>
+  
+  <hr>
+</div>
+
 </article>
 
-<footer>ATWTFG</footer>
+<footer>My flesh and my heart may fail, but God is the strength of my heart and my portion forever. </footer>
 
 </div>
 
