--- a/exercise1/mypage.html
+++ b/exercise1/mypage.html
@@ -17,12 +17,14 @@ div.container {
 	color: white;
 	text-align: center;
 	clear: center;
+	font-size:large;
+	
 }
 
 header, footer {
-    padding: 1em;
-    color: black;
-    background-color: pink;
+    padding: 0.3em;
+    color: white;
+    background-img: lastpic.jpg;
     clear: left;
     text-align: center;
     font-family: french script mt;
@@ -32,16 +34,19 @@ nav {
     float: left;
     max-width: 160px;
     margin: 0;
-    padding: 5em;
+    padding: 6em;
+	
 }
 
 nav ul {
     list-style-type: none;
     padding: 1em;
+	clear: left;
 }
 			
 nav ul a {
     text-decoration: none;
+	
 }
 
 article {
@@ -49,8 +54,11 @@ article {
     border-left: 1px gray;
     padding: 1em;
     overflow: hidden
-	font-size: 450%
+	font-size: large
+	background-color: beige;
+	font-family: comic sans ms;
 }
+
 </style>
 </head>
 <body>
@@ -63,7 +71,7 @@ article {
   
 <nav>
   <ul>
-    <li><a href="#">Shie &#9829</a></li>
+    <li><a href="#">&#9829</a></li>
     <img src="pic.jpg" alt="Mountain View" style="width:230px;height:300px;">
 
   </ul>
@@ -72,10 +80,13 @@ article {
 <article>
 <div class="w3-container"> 
   <h1>Shierene &#9752</h1>
-  <p>I am a bookworm whose favorite nocturnal hobby is reading books.</p>
-  <p>I am Shierene Cervantes, called Shie by my close friends, whom you cannot really know well without spending some time to get along with. Whenever I ask my friends what their first impressions to me were, they say either I do not look someone you could easily approach, an extremely girly person who only make friends to others in the same “level” as I am, a person who’s so conscious about her appearance, and someone who gets easily annoyed. When people start to know who I am, most of them say that I’m a sweet and very reserved girl who is lady-like in every way. However, there’s more to me than just that. Unbelievable to some, my close friends know that once you get to really know me, your first impression would definitely change into a new perspective that’s quite the opposite as your first. According to them, I am really a girly girl who has something you never thought I have to show off once I get really close to a person, and they are probably referring to my childlike attitude whenever I am with people I’m comfortable with. They also say that I can easily get along with different kinds of people for I don’t really “choose” the people I want to be friends with.
-Reading books, playing the piano, listening to really good music, seeing little children happy, shopping after a very stressful midterm or final week at school, getting high grades and making my parents proud are some of the things that can really make me happy. I have read a lot of books that inspired me in a lot of different ways and I find reading books really an interesting way to take you places you’ve never been.
+  <p>A bookworm whose favorite nocturnal hobby is reading books.</p>
+  <p> I am Shierene Cervantes, called Shie by my close friends, whom you cannot really know well without spending some time to get along with. Whenever I ask my friends what their first impressions to me were, they say either I do not look someone you could easily approach, an extremely girly person who only make friends to others in the same level as I am, a person who is so conscious about her appearance, and someone who gets easily annoyed. When people start to know who I am, most of them say that I am a sweet and very reserved girl who is lady-like in every way. </p>
+  <p>However, there is more to me than just that. Unbelievable to some, my close friends know that once you get to really know me, your first impression would definitely change into a new perspective that is quite the opposite as your first. According to them, I am really a girly girl who has something you never thought I have to show off once I get really close to a person, and they are probably referring to my childlike attitude whenever I am with people I am comfortable with. They also say that I can easily get along with different kinds of people for I do not really choose the people I want to be friends with.
 </p>
+<p>Reading books, playing the piano, listening to really good music, seeing little children happy, shopping after a very stressful midterm or final week at school, getting high grades and making my parents proud are some of the things that can really make me happy. I have read a lot of books that inspired me in a lot of different ways and I find reading books really an interesting way to take you places you have never been.
+</p>
+<p>I am rarely impressed but eternally fascinated by everything. I know that it seems a bit absurd, but most people find me quite difficult to impress, and perhaps that is because my family always reminds to always strive to be the best even when I think I am already good enough. Nevertheless, I believe that everything God created is wonderful and worth appreciating.</p>
   <p>Hello, you!</p>
   
   <hr>
