Made a slight modification

--- a/exercise1/mypage.html
+++ b/exercise1/mypage.html
@@ -80,7 +80,7 @@ article {
 <article>
 <div class="w3-container"> 
   <h1>Shierene &#9752</h1>
-  <p>A bookworm whose favorite nocturnal hobby is reading books.</p>
+  <p>A bookworm whose favorite nocturnal hobby is reading.</p>
   <p> I am Shierene Cervantes, called Shie by my close friends, whom you cannot really know well without spending some time to get along with. Whenever I ask my friends what their first impressions to me were, they say either I do not look someone you could easily approach, an extremely girly person who only make friends to others in the same level as I am, a person who is so conscious about her appearance, and someone who gets easily annoyed. When people start to know who I am, most of them say that I am a sweet and very reserved girl who is lady-like in every way. </p>
   <p>However, there is more to me than just that. Unbelievable to some, my close friends know that once you get to really know me, your first impression would definitely change into a new perspective that is quite the opposite as your first. According to them, I am really a girly girl who has something you never thought I have to show off once I get really close to a person, and they are probably referring to my childlike attitude whenever I am with people I am comfortable with. They also say that I can easily get along with different kinds of people for I do not really choose the people I want to be friends with.
 </p>
@@ -93,9 +93,19 @@ article {
 </div>
 
 </article>
+<a href="https://www.facebook.com/">
+  <img src="fb.png" style="width:42px;height:42px;border:0;"> 
+</a> 
+<a href="https://twitter.com/">
+  <img src="twitter.png" style="width:50px;height:42px;border:0;"> 
+</a> 
+<a href="https://www.instagram.com/">
+  <img src="insta.png" style="width:42px;height:42px;border:0;"> 
+</a>
+<div class="w3-container"> 
 
 <footer>My flesh and my heart may fail, but God is the strength of my heart and my portion forever. </footer>
-
+</div>
 </div>
 
 </body>
