--- a/exercise1/mypage.html
+++ b/exercise1/mypage.html
@@ -14,7 +14,7 @@
 <nav>
   <ul>
     <li><a href="#">&#9829</a></li>
-    <img align="middle" class="pic" src="pic.jpg" alt="Mountain View" style="width:230px;height:300px;>
+    <center><img align="middle" class="pic" src="pic.jpg" alt="Mountain View" style="width:230px;height:300px;> </center>
 
   </ul>
 </nav>
@@ -45,13 +45,13 @@ shopping after a very stressful midterm or final week at school, getting high gr
 
 </article>
 <a href="https://www.facebook.com/">
-  <img src="fb.png" style="width:42px;height:42px;border:0;"> 
+ <center> <img src="fb.png" alt="fb" width="42" height="42"> </center>
 </a> 
 <a href="https://twitter.com/">
-  <img src="twitter.png" style="width:50px;height:42px;border:0;"> 
+  <center> <img src="twitter.png" style="width:50px;height:42px;border:0;"> </center>
 </a> 
 <a href="https://www.instagram.com/">
-  <img src="insta.png" style="width:42px;height:42px;border:0;"> 
+  <center> <img src="insta.png" style="width:42px;height:42px;border:0;"> </center>
 </a>
 <div class="w3-container"> 
 
