--- a/exercise3/mypage.html
+++ b/exercise3/mypage.html
@@ -131,6 +131,18 @@ color:white;
 <footer>My flesh and my heart may fail, but God is the strength of my heart and my portion forever. </footer>
 </div>
 </div>
+<script>
+// string = text
+fill(92, 24, 219);
+
+var draw = function() {
+    textSize(30);
+    background(0, 238, 255);
+    var myName = "Sophia";
+    var message = myName + "!!!";
+    text(message, mouseX, mouseY);
+};
+</script>
 
 </body>
 </html>
