--- a/exercise4/mypage.html
+++ b/exercise4/mypage.html
@@ -127,6 +127,7 @@ color:white;
   <img src="insta.png" style="width:42px;height:42px;border:0;"> 
 </a>
 <div class="container2"> 
+<?php include('form.php') ?>
 
 <footer>My flesh and my heart may fail, but God is the strength of my heart and my portion forever. </footer>
 </div>
